--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@strapi/strapi": "4.16.2",
     "better-sqlite3": "8.6.0",
     "mysql": "^2.18.1",
+    "pg": "^8.11.3",
+    "pg-connection-string": "^2.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
