--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
+APP_KEYS="xxxx"
+API_TOKEN_SALT=xxxx
+ADMIN_JWT_SECRET=xxxx
+TRANSFER_TOKEN_SALT=xxx
+JWT_SECRET=xxxxxxxxx
